@@ -1,3 +1,6 @@
+2014-04-30
+	1. Added extension command for dump file management.
+	2. Added LED feature control.
 2014-02-04
 	1. Add option to configure watchdog timer.
 2014-01-11
